# amber-data-utils

./: .github-ci.yml  .gitignore  .pypirc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  pyproject.toml  relsease.hs  requirements.txt  setup.cfg  setup.py
.github/workflows/: .github-ci.yml  python-publish.yml  release.yml
amber_data_utils/: orchestration_utils.py
amberdata/: orchestration_utils.py
tests/: test_orchestration_utils.py  test_url_utils.py
