[project]
name = "amber_data_utils"
version = "0.1.2"
description = ""
authors = [
    {name = "Kang Wang",email = "kangwang@fuildone.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

